--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1e3a9104a9.js"
+      crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
 
     <div class="menu">
-      <h1>MyNotes</h1>
+      <h1><i class="fas fa-sticky-note icon"></i> MyNotes</h1>
       <div class="menu__buttons">
         <button class="menu__add"><i class="fa-solid fa-plus icon"></i> Dodaj</button>
         <button class="menu__remove"><i class="fa-solid fa-trash icon"></i> Usuń
           wszystkie</button>
       </div>
 
-      <div class="note-list">
+      <!-- <div class="note-list">
         <div class="note-list__note">
           <div class="note-list__header">
             <h3 class="note-list__title">
@@ -32,9 +34,8 @@
               obcaecati. Sint earum voluptatum libero!</div>
           </div>
         </div>
-      </div>
-
-      <div class="note-panel">
+      </div> -->
+      <!-- <div class="note-panel">
         <h2>Dodaj notatkę</h2>
         <label for="category" class="note-panel__label">Wybierz katego</label>
         <select id="category">
@@ -50,7 +51,6 @@
           <button class="cancel"><i class="far fa-window-close"></i> Anuluj</button>
         </div>
       </div>
-    </div>
-
-  </body>
-</html>
+    </div> -->
+    </body>
+  </html>
