uncomment block note-list and note-panel

--- a/index.html
+++ b/index.html
@@ -21,36 +21,50 @@
         <button class="menu__remove"><i class="fa-solid fa-trash icon"></i> Usuń
           wszystkie</button>
       </div>
+    </div>
 
-      <!-- <div class="note-list">
-        <div class="note-list__note">
-          <div class="note-list__header">
-            <h3 class="note-list__title">
-              <i class="fas fa-times"></i>
-            </h3>
-            <div class="note-list__body">Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Vero mollitia nemo alias placeat, autem deleniti
-              quis nostrum sit quos facilis optio, quidem vel perferendis neque
-              obcaecati. Sint earum voluptatum libero!</div>
-          </div>
+
+    <div class="note-list">
+      <div class="note-list__note">
+        <div class="note-list__header">
+          <h3 class="note-list__title">Praca</h3>
+          <i class="fas fa-times"></i>
         </div>
-      </div> -->
-      <!-- <div class="note-panel">
+        <div class="note-list__body">Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Vero mollitia nemo alias placeat, autem deleniti
+          quis nostrum sit quos facilis optio, quidem vel perferendis neque
+          obcaecati. Sint earum voluptatum libero!
+        </div>
+      </div>
+      <div class="note-list__note">
+        <div class="note-list__header">
+          <h3 class="note-list__title">Zakupy</h3>
+          <i class="fas fa-times"></i>
+        </div>
+        <div class="note-list__body">Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Vero mollitia nemo alias placeat, autem deleniti
+          quis nostrum sit quos facilis optio, quidem vel perferendis neque
+          obcaecati. Sint earum voluptatum libero!
+        </div>
+      </div>
+    </div>
+    <div class="note-panel">
         <h2>Dodaj notatkę</h2>
-        <label for="category" class="note-panel__label">Wybierz katego</label>
+        <label for="category" class="note-panel__label">Wybierz kategorię</label>
         <select id="category">
           <option value="0">- Wybierz kategorię- </option>
           <option value="1">Praca</option>
           <option value="1">Zakupy</option>
           <option value="1">Inne</option>
         </select>
+        <label for="textarea">Wpisz treść notatki</label>
         <textarea id="textarea" cols="30" rows="10"></textarea>
-        <p class="error">Uzupełnij wszystkie pola!</p>
+        <p class="note-panel__error">Uzupełnij wszystkie pola!</p>
         <div class="note-panel__buttons">
-          <button class="save"><i class="fas fa-save"></i> Zapisz</button>
-          <button class="cancel"><i class="far fa-window-close"></i> Anuluj</button>
+          <button class="note-panel__save"><i class="fas fa-save"></i> Zapisz</button>
+          <button class="note-panel__cancel"><i class="far fa-window-close"></i> Anuluj</button>
         </div>
       </div>
-    </div> -->
-    </body>
-  </html>
+    </div>
+  </body>
+</html>
