--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://kit.fontawesome.com/1e3a9104a9.js"
       crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
+    <script defer src="./script.js"></script>
   </head>
   <body>
 
@@ -18,17 +19,18 @@
       <h1><i class="fas fa-sticky-note icon"></i> MyNotes</h1>
       <div class="menu__buttons">
         <button class="menu__add"><i class="fa-solid fa-plus icon"></i> Dodaj</button>
-        <button class="menu__remove"><i class="fa-solid fa-trash icon"></i> Usuń
+        <button class="menu__removeAll"><i class="fa-solid fa-trash icon"></i> Usuń
           wszystkie</button>
       </div>
     </div>
-
 
     <div class="note-list">
       <div class="note-list__note">
         <div class="note-list__header">
           <h3 class="note-list__title">Praca</h3>
-          <i class="fas fa-times"></i>
+          <button class="note-list__delete-note">
+            <i class="fas fa-times icon"></i>
+          </button>
         </div>
         <div class="note-list__body">Lorem ipsum dolor sit amet consectetur
           adipisicing elit. Vero mollitia nemo alias placeat, autem deleniti
@@ -48,6 +50,7 @@
         </div>
       </div>
     </div>
+
     <div class="note-panel">
         <h2>Dodaj notatkę</h2>
         <label for="category" class="note-panel__label">Wybierz kategorię</label>
@@ -66,5 +69,6 @@
         </div>
       </div>
     </div>
+
   </body>
 </html>
