--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
       </div>
       <div class="note-list__note">
         <div class="note-list__header">
-          <h3 class="note-list__title">Zakupy</h3>
-          <i class="fas fa-times"></i>
+          <h3 class="note-list__title">Praca</h3>
+          <button class="note-list__delete-note">
+            <i class="fas fa-times icon"></i>
+          </button>
         </div>
         <div class="note-list__body">Lorem ipsum dolor sit amet consectetur
           adipisicing elit. Vero mollitia nemo alias placeat, autem deleniti
@@ -49,13 +51,14 @@
           obcaecati. Sint earum voluptatum libero!
         </div>
       </div>
+
     </div>
 
     <div class="note-panel">
         <h2>Dodaj notatkę</h2>
         <label for="category" class="note-panel__label">Wybierz kategorię</label>
         <select id="category">
-          <option value="0">- Wybierz kategorię- </option>
+          <option value="0" selected disabled>- Wybierz kategorię- </option>
           <option value="1">Praca</option>
           <option value="1">Zakupy</option>
           <option value="1">Inne</option>
