--- a/index.html
+++ b/index.html
@@ -24,35 +24,7 @@
       </div>
     </div>
 
-    <div class="note-list">
-      <div class="note-list__note">
-        <div class="note-list__header">
-          <h3 class="note-list__title">Praca</h3>
-          <button class="note-list__delete-note">
-            <i class="fas fa-times icon"></i>
-          </button>
-        </div>
-        <div class="note-list__body">Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Vero mollitia nemo alias placeat, autem deleniti
-          quis nostrum sit quos facilis optio, quidem vel perferendis neque
-          obcaecati. Sint earum voluptatum libero!
-        </div>
-      </div>
-      <div class="note-list__note">
-        <div class="note-list__header">
-          <h3 class="note-list__title">Praca</h3>
-          <button class="note-list__delete-note">
-            <i class="fas fa-times icon"></i>
-          </button>
-        </div>
-        <div class="note-list__body">Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Vero mollitia nemo alias placeat, autem deleniti
-          quis nostrum sit quos facilis optio, quidem vel perferendis neque
-          obcaecati. Sint earum voluptatum libero!
-        </div>
-      </div>
-
-    </div>
+    <div class="note-list"></div>
 
     <div class="note-panel">
         <h2>Dodaj notatkę</h2>
