--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
     <div class="note-panel">
         <h2>Dodaj notatkę</h2>
         <label for="category" class="note-panel__label">Wybierz kategorię</label>
-        <select id="category">
+        <select id="category" onchange="selectValue()">
           <option value="0" selected disabled>- Wybierz kategorię- </option>
           <option value="1">Praca</option>
           <option value="1">Zakupy</option>
           <option value="1">Inne</option>
         </select>
         <label for="textarea">Wpisz treść notatki</label>
-        <textarea id="textarea" cols="30" rows="10"></textarea>
+        <textarea id="textarea" cols="10" rows="5"></textarea>
         <p class="note-panel__error">Uzupełnij wszystkie pola!</p>
         <div class="note-panel__buttons">
-          <button class="note-panel__save"><i class="fas fa-save"></i> Zapisz</button>
-          <button class="note-panel__cancel"><i class="far fa-window-close"></i> Anuluj</button>
+          <button class="note-panel__save"><i class="fas fa-save icon"></i> Zapisz</button>
+          <button class="note-panel__cancel"><i class="far fa-window-close icon"></i> Anuluj</button>
         </div>
       </div>
     </div>
