--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       rel="stylesheet">
     <script src="https://kit.fontawesome.com/1e3a9104a9.js"
       crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/buttons.css">
+    <link rel="stylesheet" href="./css/note-list.css">
+    <link rel="stylesheet" href="./css/note-panel.css">
     <script defer src="./script.js"></script>
   </head>
   <body>
@@ -28,7 +31,7 @@
 
     <div class="note-panel">
         <h2>Dodaj notatkę</h2>
-        <label for="category" class="note-panel__label">Wybierz kategorię</label>
+        <label for="category">Wybierz kategorię</label>
         <select id="category" onchange="selectValue()">
           <option value="0" selected disabled>- Wybierz kategorię- </option>
           <option value="1">Praca</option>
